--- a/AndroidLightRunner/LightRunner/bin/AndroidManifest.xml
+++ b/AndroidLightRunner/LightRunner/bin/AndroidManifest.xml
@@ -1,17 +1,38 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.RedmondRNDLabs.framework"
+    package="com.RedmondRNDLabs.lightRunner"
+    android:installLocation="internalOnly"
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+ 	
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-
+    
+ 	<instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:label="Test"
+        android:targetPackage="com.RedmondRNDLabs.lightRunner" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="LightRunner" >
+        
+        <activity
+            android:name="com.RedmondRNDLabs.lightRunner.LightRunner"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:label="Light Runner"
+            android:screenOrientation="landscape" >
+            <intent-filter>
+                <action android:name="androids.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
