Added basic BASIC powerup functionality (to be changed)

--- a/LightRunnerLibGDX-desktop/bin/.gitignore
+++ b/LightRunnerLibGDX-desktop/bin/.gitignore
@@ -1,11 +1,16 @@
-/mirror.png
-/LightRunnerTitle.png
-/bottom.png
-/right.png
-/top.png
-/blip.wav
-/soundtrack.mp3
-/hit.wav
+/cave.png
+/characterDirection0.png
 /dead.wav
-/com
+/hit.wav
+/libgdx.png
+/mirror.png
+/pixel.png
+/right.png
+/Easy.jpg
+/LightRunnerTitle.png
 /LoadingScreen.png
+/blip.wav
+/bottom.png
+/cave.jpg
+/com
+/powerup.png
