--- a/LightRunnerLibGDX-desktop/bin/.gitignore
+++ b/LightRunnerLibGDX-desktop/bin/.gitignore
@@ -1,16 +1,19 @@
-/cave.png
-/characterDirection0.png
-/dead.wav
-/hit.wav
-/libgdx.png
-/mirror.png
-/pixel.png
-/right.png
 /Easy.jpg
 /LightRunnerTitle.png
 /LoadingScreen.png
 /blip.wav
 /bottom.png
 /cave.jpg
+/cave.png
+/characterDirection0.png
 /com
+/data
+/dead.wav
+/hit.wav
+/libgdx.png
+/mirror.png
+/pixel.png
 /powerup.png
+/right.png
+/soundtrack.mp3
+/top.png
