--- a/LightRunner-wp7/LightRunner-wp7/LightRunner-wp7/LightRunner-wp7.csproj
+++ b/LightRunner-wp7/LightRunner-wp7/LightRunner-wp7/LightRunner-wp7.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Aura.cs" />
     <Compile Include="DebugOverlay.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="Input.cs" />
     <Compile Include="Light.cs" />
     <Compile Include="LightBeam.cs" />
     <Compile Include="Line.cs" />
@@ -83,7 +84,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeRenderer.cs" />
     <Compile Include="Sprite2.cs" />
-    <Compile Include="World.cs" />
+    <Compile Include="World.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="WorldRenderer.cs" />
     <None Include="Properties\AppManifest.xml">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
@@ -92,7 +95,7 @@
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
     </None>
     <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="GameScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
