Repositioned names, "Special thanks to StudentRND" moved to bottom (nitpicky things)

--- a/LightRunnerLibGDX-desktop/bin/.gitignore
+++ b/LightRunnerLibGDX-desktop/bin/.gitignore
@@ -1,7 +1,7 @@
-/Powerups
-/Screenshots
-/powerupBox.png
-/pause.png
-/gameover.png
-/music.png
-/sfx.png
+/Powerup0.wav
+/Powerup1.wav
+/Powerup2.wav
+/clearScreen.wav
+/onehit.wav
+/prism.wav
+/spawnMagnet.wav
