--- a/LightRunnerLibGDX-desktop/bin/.gitignore
+++ b/LightRunnerLibGDX-desktop/bin/.gitignore
@@ -1,7 +1,43 @@
-/inst1.png
 /inst2.png
 /inst3.png
+/libgdx.png
+/magnet.png
+/mirror.png
+/music.png
+/onehit.wav
+/pause.png
+/pixel.png
 /playIntro.png
+/powerupBox.png
+/prism.png
+/prism.wav
 /scrollBar.png
 /scrollBarOld.png
 /scroller.png
+/sfx.png
+/Screenshots
+/Thumbs.db
+/blip.wav
+/characterDirection0.png
+/circle.png
+/clearScreen.wav
+/cut1.png
+/cut2.png
+/cut3.png
+/dead.wav
+/enemy.png
+/gameover.png
+/gear.png
+/hit.wav
+/inst1.png
+/Powerup0.wav
+/Powerup1.wav
+/Powerup2.wav
+/Powerups
+/Buttons
+/Easy.jpg
+/Fonts
+/LightRunnerTitle.png
+/LoadingScreen.png
+/PhoneGameThumb.png
+/com
