--- a/LightRunnerLibGDX-desktop/bin/.gitignore
+++ b/LightRunnerLibGDX-desktop/bin/.gitignore
@@ -1,1 +1,44 @@
+/clearScreen.wav
+/cut1.png
+/cut2.png
+/cut3.png
+/dead.wav
+/enemy.png
+/gameover.png
+/gear.png
+/hit.wav
+/inst1.png
+/inst2.png
+/inst3.png
+/libgdx.png
+/magnet.png
+/mirror.png
+/music.png
+/onehit.wav
+/pause.png
+/pixel.png
+/playIntro.png
+/powerupBox.png
+/prism.png
+/prism.wav
+/scrollBar.png
+/scrollBarOld.png
+/scroller.png
+/sfx.png
+/Buttons
+/Easy.jpg
 /Fonts
+/LightRunnerTitle.png
+/LoadingScreen.png
+/PhoneGameThumb.png
+/Powerup0.wav
+/Powerup1.wav
+/Powerup2.wav
+/Powerups
+/Screenshots
+/Thumbs.db
+/arrow.png
+/blip.wav
+/characterDirection0.png
+/circle.png
+/com
