--- a/LightRunnerLibGDX-desktop/bin/.gitignore
+++ b/LightRunnerLibGDX-desktop/bin/.gitignore
@@ -1,4 +1,21 @@
+/Buttons
+/Easy.jpg
+/Fonts
+/LightRunnerTitle.png
+/LoadingScreen.png
+/PhoneGameThumb.png
+/Powerup0.wav
+/Powerup1.wav
+/Powerup2.wav
+/Powerups
+/Screenshots
+/Thumbs.db
+/arrow.png
+/blip.wav
+/characterDirection0.png
+/circle.png
 /clearScreen.wav
+/com
 /cut1.png
 /cut2.png
 /cut3.png
@@ -25,20 +42,4 @@
 /scrollBarOld.png
 /scroller.png
 /sfx.png
-/Buttons
-/Easy.jpg
-/Fonts
-/LightRunnerTitle.png
-/LoadingScreen.png
-/PhoneGameThumb.png
-/Powerup0.wav
-/Powerup1.wav
-/Powerup2.wav
-/Powerups
-/Screenshots
-/Thumbs.db
-/arrow.png
-/blip.wav
-/characterDirection0.png
-/circle.png
-/com
+/Controls
