--- a/LightRunnerLibGDX-android/bin/AndroidManifest.xml
+++ b/LightRunnerLibGDX-android/bin/AndroidManifest.xml
@@ -10,6 +10,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <!-- Required permission to check licensing. -->
+    <!-- uses-permission android:name="com.android.vending.CHECK_LICENSE" /-->
+    <!-- uses-permission android:name="android.permission.READ_PHONE_STATE" /-->
     
 
     <application
