--- a/LightRunnerLibGDX-android/bin/AndroidManifest.xml
+++ b/LightRunnerLibGDX-android/bin/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/lightrunner"
+        android:icon="@drawable/lightrunner2"
         android:label="@string/app_name" >
         <activity
             android:name="com.picotech.lightrunnerlibgdx.MainActivity"
